added new publication, added bandcamp to menu

--- a/code.html
+++ b/code.html
@@ -160,6 +160,10 @@ My CV
 Google scholar
 </a></li>
 
+<li><a href="http://ible.bandcamp.com/" target="lowband">
+Bandcamp
+</a></li>
+
 <li><a href="http://www.github.com/lowagner" target="lowgithub">
 Github
 </a></li>
