--- a/pub.html
+++ b/pub.html
@@ -6,42 +6,56 @@
 <body>
 <a id="top"> </a>
 
-<!-- Main stuff to read and what not. -->
-
-
-
-
-
-
-
-
-
-
-<!-- Main title and what not. -->
 <div class=header>
-<h2> lucas o. wagner @ work </h2>
-
-<ul>
-<li>
-<a href="#2008">2008</a>
-</li>
-
-<li>
-<a href="#2012">2012</a>
-</li>
-
-<li>
-<a href="#2013">2013</a>
-</li>
-</ul>
-
+  <h2> lucas o. wagner @ work </h2>
+    <ul>
+    <li>
+        <a href="#2008">2008</a>
+    </li>
+    <li>
+        <a href="#2012">2012</a>
+    </li>
+    <li>
+        <a href="#2013">2013</a>
+    </li>
+    <li>
+        <a href="#2014">2014</a>
+    </li>
+    </ul>
 </div>
 
+<!-- Main stuff to read and what not. -->
 
 <div class=main>
 <h3>Publications</h3>
 
 <ul>
+
+
+    <a id="2014"></a>
+<li>
+<table>
+<tr>
+<td class=number>
+7.
+</td>
+<td class=wideentry>
+F. Malet, A. Mirtschink, K.J.H. Giesbertz, L.O. Wagner, P. Gori-Giorgi,
+<!-- <a href="pubs/MMGW14.pdf" target="mmgw14"> -->
+<a href="http://pubs.rsc.org/en/Content/ArticleLanding/2014/CP/C4CP00407H" target="mmgw14">
+Exchange-correlation functionals from the strong interaction limit of DFT: applications to model chemical systems
+</a>,
+<i>Phys. Chem. Chem. Phys.</i> <b>advance</b>, np (2014).
+</td>
+</tr>
+</table>
+<p>
+Developing the strictly correlated electron approach for chemical systems.
+</p>
+<p class=tags>tags: DFT, 1d </p>
+</li>
+
+
 
 
 <a id="2013"></a>
@@ -265,6 +279,10 @@ My CV
 
 <li><a href="http://scholar.google.com/citations?user=sbRpEIcAAAAJ&hl=en" target="lowscholar">
 Google scholar
+</a></li>
+
+<li><a href="http://ible.bandcamp.com/" target="lowband">
+Bandcamp
 </a></li>
 
 <li><a href="http://www.github.com/lowagner" target="lowgithub">
