--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 </li>
 
 <li>
-<a href="#program">Programming</a>
+<a href="#creations">Creations</a>
 </li>
 
 <li>
@@ -66,13 +66,13 @@ some interesting theories from time to time.
 </li>
 
 
-<a id="program">
+<a id="creations">
 </a>
 <li>
 <table>
 <tr>
 <td class=mainentryfull>
-Programming interests
+Creations
 </td>
 <!--<td class=mainentrydate>circa 1980s</td>-->
 </tr>
@@ -86,6 +86,10 @@ I support open source programming, so most of the releasable code is here on git
 Various "helpful" code-snippets 
 may also appear on <a href="http://uncalc.blogspot.com/" target="lowblog">my blog</a>, in addition
 to other things.
+</p>
+<p>
+Ages ago I wrote some <a href="http://ible.bandcamp.com">electronic music</a>,
+which may sound appealing to some (and a little grating on others).
 </p>
 </li>
 
@@ -176,6 +180,10 @@ My CV
 Google scholar
 </a></li>
 
+<li><a href="http://ible.bandcamp.com/" target="lowband">
+Bandcamp
+</a></li>
+
 <li><a href="http://www.github.com/lowagner" target="lowgithub">
 Github
 </a></li>
@@ -183,6 +191,7 @@ Github
 <li><a href="http://uncalc.blogspot.com/" target="lowblog">
 A blog
 </a></li>
+
 
 </ul>
 
