--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <title>Home</title>
 <link href='primary.css' rel='stylesheet' type='text/css' />
@@ -35,7 +36,22 @@
 
 
 <a id="hello"></a>
-<h3>Hello!</h3>
+<h3 id="demo">Hello!</h3>
+
+<script>
+var x="";
+var time=new Date().getHours();
+if (time<20)
+{
+x="Hello there!";
+}
+else
+{
+x="Good evening!";
+}
+document.getElementById("demo").innerHTML=x;
+</script>
+
 
 <li>
 <table class=nostyle>
