--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 <ul>
 
 
-
 <a id="hello"></a>
 <h3 id="demo">Hello!</h3>
 
-<script>
+<script >
 var x="";
 var time=new Date().getHours();
 if (time<20)
@@ -100,6 +99,8 @@ De Boelelaan 1083<br>
 </center>
 
 </ul>
+
+<?php echo '<p>PHP test</p>'; ?> 
 
 </div>
 <!-- END main stuff to read and what not. -->
