fixed a-href target

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@ may also appear on <a href="http://uncalc.blogspot.com/" target="lowblog">my blo
 to other things.
 </p>
 <p>
-Ages ago I wrote some <a href="http://ible.bandcamp.com">electronic music</a>,
+Ages ago I wrote some <a href="http://ible.bandcamp.com" target="lowband">electronic music</a>,
 which may sound appealing to some (and a little grating on others).
 </p>
 </li>
