removing broken functionality, promising some nice searches

--- a/pub.html
+++ b/pub.html
@@ -15,7 +15,7 @@ var publications = TAFFY([
         volume:"advance",
         year:2014,
         url:"http://dx.doi.org/10.1039/C4CP00407H",
-//        eprint:"lowagner.github.io/pubs/MMGW14.pdf",
+//        eprint:"http://lowagner.github.io/pubs/MMGW14.pdf",
         lowid:7,
         description:"Developing the strictly correlated electron approach for chemical systems.",
         tags:"DFT, 1d"
@@ -29,7 +29,7 @@ var publications = TAFFY([
         pages:"093003",
         year:2013,
         url:"http://dx.doi.org/10.1103/PhysRevLett.111.093003",
-        eprint:"lowagner.github.io/pubs/WSBW13.pdf",
+        eprint:"http://lowagner.github.io/pubs/WSBW13.pdf",
         note:"<b>editors' suggestion</b>; <i>ibid</i>. <b>112</b>, 019901(E) (2014)",
         lowid:6,
         description:"Proving convergence of the Kohn-Sham algorithm using the "+
@@ -45,7 +45,7 @@ var publications = TAFFY([
         pages:"96-101",
         year:2013,
         url:"http://dx.doi.org/10.1002/qua.24259",
-        eprint:"lowagner.github.io/pubs/BW13.pdf",
+        eprint:"http://lowagner.github.io/pubs/BW13.pdf",
         lowid:5,
         description:"The basics of Kohn-Sham density functional theory.",
         tags:"DFT"
@@ -59,7 +59,7 @@ var publications = TAFFY([
         pages:"056402",
         year:2012,
         url:"http://dx.doi.org/10.1103/PhysRevLett.109.056402",
-        eprint:"lowagner.github.io/pubs/SWWB12.pdf",
+        eprint:"http://lowagner.github.io/pubs/SWWB12.pdf",
         lowid:4,
         description:"Solving the many-electron Schr&ouml;dinger equation in the continuum "+
                     "via the density matrix renormalization group, "+
@@ -75,7 +75,7 @@ var publications = TAFFY([
         pages:"8581-8590",
         year:2012,
         url:"http://dx.doi.org/10.1039/C2CP24118H",
-        eprint:"lowagner.github.io/pubs/WSBW12.pdf",
+        eprint:"http://lowagner.github.io/pubs/WSBW12.pdf",
         lowid:3,
         description:"Exact Kohn-Sham density functional theory in 1d, compared "+
                     "with the standard local density and Hartree-Fock approximations, "+
@@ -95,7 +95,7 @@ var publications = TAFFY([
         chapter:"5",
         url:"http://www.springer.com/978-3-642-23517-7",
         editor:"M.A.L. Marques, and N.T. Maitra, and F.M.S. Nogueira, and E.K.U. Gross, and A. Rubio",
-        eprint:"lowagner.github.io/pubs/WYB12.pdf",
+        eprint:"http://lowagner.github.io/pubs/WYB12.pdf",
         lowid:2,
         description:"Simple conditions on the exchange-correlation "+
                     "kernel <i>f<sub>xc</sub></i> within time-dependent density functional theory, "+
@@ -111,7 +111,7 @@ var publications = TAFFY([
         number:"2",
         year:2008,
         url:"https://www.rose-hulman.edu/mathjournal/v9n2.php",
-        eprint:"lowagner.github.io/pubs/BLAB.pdf",
+        eprint:"http://lowagner.github.io/pubs/BLAB.pdf",
         lowid:1.5,
         description:"How to count the number of unique objects, painted various colors at "+
                     "different vertices, when group operations can rotate the object <i>and</i> "+
@@ -127,7 +127,7 @@ var publications = TAFFY([
         pages:"101-113",
         year:2008,
         url:"http://dx.doi.org/10.1016/j.nuclphysa.2008.01.004",
-        eprint:"lowagner.github.io/pubs/NSCL.pdf",
+        eprint:"http://lowagner.github.io/pubs/NSCL.pdf",
         description:"Work from a nuclear fragmentation experiment at the National Superconducting "+
                     "Cyclotron Laboratory at Michigan State University.",
         lowid:1,
@@ -277,9 +277,9 @@ function writepub( record, recordnumber ) {
   <h2> lucas o. wagner @ work </h2>
     <ul>
     <li>
-        <a href="#2008">2008</a>
+        search features to be added. 
     </li>
-    <li>
+<!--    <li>
         <a href="#2012">2012</a>
     </li>
     <li>
@@ -287,8 +287,8 @@ function writepub( record, recordnumber ) {
     </li>
     <li>
         <a href="#2014">2014</a>
-    </li>
-    </ul>
+    </li> -->
+    </ul> 
 </div>
 
 <!-- Main stuff to read and what not. -->
