--- a/index.html
+++ b/index.html
@@ -95,7 +95,16 @@ De Boelelaan 1083<br>
 
 
 <center>
-<p><i> Last updated:  2014-05-02</i> </p><!-- last update -->
+<p><i> Last updated:
+<script>
+today = document.lastModified;
+today = today.replace(/\//g, " ");
+today = today.replace(/-/g, " ");
+//document.write(today);
+today = new Date(Date.parse(today));
+document.write(today.getFullYear()+"-"+(today.getMonth()+1)+"-"+today.getDate());
+</script>
+</i> </p><!-- last update -->
 </center>
 
 </ul>
