added new publication

--- a/pub.html
+++ b/pub.html
@@ -9,6 +9,21 @@
 var publications = TAFFY([
     {
         style:"article",
+        title:"Kohn-Sham calculations with the exact functional",
+        author:"L.O. Wagner, T.E. Baker, and E.M. Stoudenmire, and K. Burke, and S.R. White",
+        journal:"arxiv",
+        volume:"?",
+        pages:"??",
+        year:2014,
+        //url:"http://dx.doi.org/10.1103/PhysRevLett.111.093003",
+        eprint:"http://lowagner.github.io/pubs/WBSB14.pdf",
+        lowid:8,
+        description:"Illustrating convergence of the Kohn-Sham algorithm using the "+
+                    "exact functional and studying issues of <i>v</i>-representability.",
+        tags:"DFT, 1d"
+    },
+    {
+        style:"article",
         title:"Exchange-correlation functionals from the strong interaction limit of DFT: applications to model chemical systems",
         author:"F. Malet, and A. Mirtschink, and K.J.H. Giesbertz, and L.O. Wagner, and P. Gori-Giorgi",
         journal:"Phys. Chem. Chem. Phys.",
