--- a/pub.html
+++ b/pub.html
@@ -125,6 +125,7 @@ var publications = TAFFY([
         journal:"Rose-Hulman Undergraduate Mathematics Journal",
         volume:"9",
         number:"2",
+        pages:"1-8",
         year:2008,
         url:"https://www.rose-hulman.edu/mathjournal/v9n2.php",
         eprint:"http://lowagner.github.io/pubs/BLAB.pdf",
