Added publication url

--- a/pub.html
+++ b/pub.html
@@ -12,10 +12,10 @@ var publications = TAFFY([
         title:"Kohn-Sham calculations with the exact functional",
         author:"L.O. Wagner, T.E. Baker, and E.M. Stoudenmire, and K. Burke, and S.R. White",
         journal:"arxiv",
-        volume:"?",
-        pages:"??",
+        volume:"1405",
+        pages:"0864",
         year:2014,
-        //url:"http://dx.doi.org/10.1103/PhysRevLett.111.093003",
+        url:"http://arxiv.org/abs/1405.0864",
         eprint:"http://lowagner.github.io/pubs/WBSB14.pdf",
         lowid:8,
         description:"Illustrating convergence of the Kohn-Sham algorithm using the "+
