tidying and feature adding to pubs

--- a/pub.html
+++ b/pub.html
@@ -16,7 +16,7 @@ var publications = TAFFY([
         pages:"0864",
         year:2014,
         url:"http://arxiv.org/abs/1405.0864",
-        eprint:"http://lowagner.github.io/pubs/WBSB14.pdf",
+        eprint:"pubs/WBSB14.pdf",
         lowid:8,
         description:"Illustrating convergence of the Kohn-Sham algorithm using the "+
                     "exact functional and studying issues of <i>v</i>-representability.",
@@ -31,7 +31,7 @@ var publications = TAFFY([
         volume:"advance",
         year:2014,
         url:"http://dx.doi.org/10.1039/C4CP00407H",
-//        eprint:"http://lowagner.github.io/pubs/MMGW14.pdf",
+//        eprint:"pubs/MMGW14.pdf",
         lowid:7,
         description:"Developing the strictly correlated electron approach for chemical systems.",
         tags:"DFT, 1d"
@@ -45,7 +45,7 @@ var publications = TAFFY([
         pages:"093003",
         year:2013,
         url:"http://dx.doi.org/10.1103/PhysRevLett.111.093003",
-        eprint:"http://lowagner.github.io/pubs/WSBW13.pdf",
+        eprint:"pubs/WSBW13.pdf",
         note:"<b>editors' suggestion</b>; <i>ibid</i>. <b>112</b>, 019901(E) (2014)",
         lowid:6,
         description:"Proving convergence of the Kohn-Sham algorithm using the "+
@@ -61,7 +61,7 @@ var publications = TAFFY([
         pages:"96-101",
         year:2013,
         url:"http://dx.doi.org/10.1002/qua.24259",
-        eprint:"http://lowagner.github.io/pubs/BW13.pdf",
+        eprint:"pubs/BW13.pdf",
         lowid:5,
         description:"The basics of Kohn-Sham density functional theory.",
         tags:"DFT"
@@ -75,7 +75,7 @@ var publications = TAFFY([
         pages:"056402",
         year:2012,
         url:"http://dx.doi.org/10.1103/PhysRevLett.109.056402",
-        eprint:"http://lowagner.github.io/pubs/SWWB12.pdf",
+        eprint:"pubs/SWWB12.pdf",
         lowid:4,
         description:"Solving the many-electron Schr&ouml;dinger equation in the continuum "+
                     "via the density matrix renormalization group, "+
@@ -91,7 +91,7 @@ var publications = TAFFY([
         pages:"8581-8590",
         year:2012,
         url:"http://dx.doi.org/10.1039/C2CP24118H",
-        eprint:"http://lowagner.github.io/pubs/WSBW12.pdf",
+        eprint:"pubs/WSBW12.pdf",
         lowid:3,
         description:"Exact Kohn-Sham density functional theory in 1d, compared "+
                     "with the standard local density and Hartree-Fock approximations, "+
@@ -111,7 +111,7 @@ var publications = TAFFY([
         chapter:"5",
         url:"http://www.springer.com/978-3-642-23517-7",
         editor:"M.A.L. Marques, and N.T. Maitra, and F.M.S. Nogueira, and E.K.U. Gross, and A. Rubio",
-        eprint:"http://lowagner.github.io/pubs/WYB12.pdf",
+        eprint:"pubs/WYB12.pdf",
         lowid:2,
         description:"Simple conditions on the exchange-correlation "+
                     "kernel <i>f<sub>xc</sub></i> within time-dependent density functional theory, "+
@@ -128,7 +128,7 @@ var publications = TAFFY([
         pages:"1-8",
         year:2008,
         url:"https://www.rose-hulman.edu/mathjournal/v9n2.php",
-        eprint:"http://lowagner.github.io/pubs/BLAB.pdf",
+        eprint:"pubs/BLAB.pdf",
         lowid:1.41421,
         description:"How to count the number of unique objects, painted various colors at "+
                     "different vertices, when group operations can rotate the object <i>and</i> "+
@@ -144,7 +144,7 @@ var publications = TAFFY([
         pages:"101-113",
         year:2008,
         url:"http://dx.doi.org/10.1016/j.nuclphysa.2008.01.004",
-        eprint:"http://lowagner.github.io/pubs/NSCL.pdf",
+        eprint:"pubs/NSCL.pdf",
         description:"Work from a nuclear fragmentation experiment at the National Superconducting "+
                     "Cyclotron Laboratory at Michigan State University.",
         lowid:1,
@@ -211,21 +211,26 @@ function writebyfilter( func ) {
     }
     else
     {
-        pubsMIN = s*maxPP;
-        pubsMAX = (s+1)*maxPP-1; 
+        pubsMIN = s*pubsMAXpp;
+        pubsMAX = (s+1)*pubsMAXpp-1; 
         publications( func ).each( writeornotpub );
-        document.write("<li><table class=navigation><tr>");
-        if (pubsBEFORE)
-            document.write("<td width=\"100px\"><a href=\"pub.html"+everythingButS+"s="+(s-1)+"\">Previous</a></td>");
-        else
-            document.write("<td width=\"100px\"></td>"); 
-        document.write("<td width=\"200px\" align=\"center\"><a href=\"#top\">Back to top</a></td>");
 
-        if (pubsAFTER)
-            document.write("<td width=\"100px\" align=\"right\"><a href=\"pub.html"+everythingButS+"s="+(s+1)+"\">Next</a></td>");
-        else
-            document.write("<td width=\"100px\"></td>");
-        document.write("</tr></table></li>");
+        if ( pubsDISPLAYED >= pubsSHOWbackTOtopAFTER )
+        {
+            document.write("<li><table class=navigation><tr>");
+            if (pubsBEFORE)
+                document.write("<td width=\"100px\"><a href=\"pub.html"+everythingButS+"s="+(s-1)+"\">Previous</a></td>");
+            else
+                document.write("<td width=\"100px\"></td>"); 
+
+            document.write("<td width=\"200px\" align=\"center\"><a href=\"#top\">Back to top</a></td>");
+
+            if (pubsAFTER)
+                document.write("<td width=\"100px\" align=\"right\"><a href=\"pub.html"+everythingButS+"s="+(s+1)+"\">Next</a></td>");
+            else
+                document.write("<td width=\"100px\"></td>");
+            document.write("</tr></table></li>");
+        }
     }
 };
 
