fixed walker date

--- a/code.html
+++ b/code.html
@@ -88,7 +88,7 @@ page.
 <table>
 <tr>
 <td class=mainentrytitle><a href="https://github.com/lowagner/walker" target="walker">Walker</a></td>
-<td class=mainentrydate>2009-2013 (??)</td>
+<td class=mainentrydate>2009+</td>
 </tr>
 </table>
 <p>
