New updated publications

--- a/pub.html
+++ b/pub.html
@@ -11,9 +11,9 @@ var publications = TAFFY([
         style:"article",
         title:"Kohn-Sham calculations with the exact functional",
         author:"L.O. Wagner, T.E. Baker, and E.M. Stoudenmire, and K. Burke, and S.R. White",
-        journal:"arxiv",
-        volume:"1405",
-        pages:"0864",
+        journal:"accepted to PRB",
+        volume:"-",
+        pages:"-",
         year:2014,
         url:"http://arxiv.org/abs/1405.0864",
         eprint:"pubs/WBSB14.pdf",
@@ -27,11 +27,11 @@ var publications = TAFFY([
         title:"Exchange-correlation functionals from the strong interaction limit of DFT: applications to model chemical systems",
         author:"F. Malet, and A. Mirtschink, and K.J.H. Giesbertz, and L.O. Wagner, and P. Gori-Giorgi",
         journal:"Phys. Chem. Chem. Phys.",
-        pages:"-",
-        volume:"advance",
+        pages:"14551-14558",
+        volume:"16",
         year:2014,
         url:"http://dx.doi.org/10.1039/C4CP00407H",
-//        eprint:"pubs/MMGW14.pdf",
+        eprint:"pubs/MMGW14.pdf",
         lowid:7,
         description:"Developing the strictly correlated electron approach for chemical systems.",
         tags:"DFT, 1d"
