New publication information

--- a/pub.html
+++ b/pub.html
@@ -10,16 +10,17 @@ var publications = TAFFY([
     {
         style:"article",
         title:"Kohn-Sham calculations with the exact functional",
-        author:"L.O. Wagner, T.E. Baker, and E.M. Stoudenmire, and K. Burke, and S.R. White",
-        journal:"accepted to PRB",
-        volume:"-",
-        pages:"-",
+        author:"L.O. Wagner, and T.E. Baker, and E.M. Stoudenmire, and K. Burke, and S.R. White",
+        journal:"Phys. Rev. B",
+        volume:"90",
+        pages:"045109",
         year:2014,
-        url:"http://arxiv.org/abs/1405.0864",
+        url:"http://link.aps.org/doi/10.1103/PhysRevB.90.045109",
         eprint:"pubs/WBSB14.pdf",
         lowid:8,
         description:"Illustrating convergence of the Kohn-Sham algorithm using the "+
                     "exact functional and studying issues of <i>v</i>-representability.",
+        note:"<b>editors' suggestion</b>",
         tags:"DFT, 1d"
     },
     {
