Fixed bibtex style to not have commas between names

--- a/pub.html
+++ b/pub.html
@@ -10,7 +10,7 @@ var publications = TAFFY([
     {
         style:"article",
         title:"Kohn-Sham calculations with the exact functional",
-        author:"L.O. Wagner, and T.E. Baker, and E.M. Stoudenmire, and K. Burke, and S.R. White",
+        author:"L.O. Wagner and T.E. Baker and E.M. Stoudenmire and K. Burke and S.R. White",
         journal:"Phys. Rev. B",
         volume:"90",
         pages:"045109",
@@ -26,7 +26,7 @@ var publications = TAFFY([
     {
         style:"article",
         title:"Exchange-correlation functionals from the strong interaction limit of DFT: applications to model chemical systems",
-        author:"F. Malet, and A. Mirtschink, and K.J.H. Giesbertz, and L.O. Wagner, and P. Gori-Giorgi",
+        author:"F. Malet and A. Mirtschink and K.J.H. Giesbertz and L.O. Wagner and P. Gori-Giorgi",
         journal:"Phys. Chem. Chem. Phys.",
         pages:"14551-14558",
         volume:"16",
@@ -40,7 +40,7 @@ var publications = TAFFY([
     {
         style:"article",
         title:"Guaranteed convergence of the Kohn-Sham equations",
-        author:"L.O. Wagner, and E.M. Stoudenmire, and K. Burke, and S.R. White",
+        author:"L.O. Wagner and E.M. Stoudenmire and K. Burke and S.R. White",
         journal:"Phys. Rev. Lett.",
         volume:"111",
         pages:"093003",
@@ -70,7 +70,7 @@ var publications = TAFFY([
     {
         style:"article",
         title:"One-dimensional continuum electronic structure with the density-matrix renormalization group and its implications for density-functional theory",
-        author:"E.M. Stoudenmire, and L.O. Wagner, and S.R. White, and K. Burke",
+        author:"E.M. Stoudenmire and L.O. Wagner and S.R. White and K. Burke",
         journal:"Phys. Rev. Lett.",
         volume:"109",
         pages:"056402",
@@ -86,7 +86,7 @@ var publications = TAFFY([
     {
         style:"article",
         title:"Reference electronic structure calculations in one dimension",
-        author:"L.O. Wagner, and E.M. Stoudenmire, and K. Burke, and S.R. White",
+        author:"L.O. Wagner and E.M. Stoudenmire and K. Burke and S.R. White",
         journal:"Phys. Chem. Chem. Phys.",
         volume:"14",
         pages:"8581-8590",
@@ -103,7 +103,7 @@ var publications = TAFFY([
         style:"inbook",
         title:"Reference electronic structure calculations in one dimension",
         booktitle:"Fundamentals of Time-Dependent Density Functional Theory",
-        author:"L.O. Wagner, and Z.-hui Yang, and K. Burke",
+        author:"L.O. Wagner and Z.-hui Yang and K. Burke",
         number:"837",
         pages:"101-122",
         series:"Lecture Notes in Physics",
@@ -111,7 +111,7 @@ var publications = TAFFY([
         year:2012,
         chapter:"5",
         url:"http://www.springer.com/978-3-642-23517-7",
-        editor:"M.A.L. Marques, and N.T. Maitra, and F.M.S. Nogueira, and E.K.U. Gross, and A. Rubio",
+        editor:"M.A.L. Marques and N.T. Maitra and F.M.S. Nogueira and E.K.U. Gross and A. Rubio",
         eprint:"pubs/WYB12.pdf",
         lowid:2,
         description:"Simple conditions on the exchange-correlation "+
@@ -139,7 +139,7 @@ var publications = TAFFY([
     {
         style:"article",
         title:"Production of nuclei in neutron unbound states via primary fragmentation of <sup>48</sup>Ca",
-        author:"G. Christian, and W.A. Peters, and D. Absalon, and D. Albertson, and T. Baumann, and D. Bazin, and E. Breitbach, and J. Brown, and P.L. Cole, and D. Denby, and P.A. DeYoung, and J.E. Finck, and N. Frank, and A. Fritsch, and C. Hall, and A.M. Hayes, and J. Hinnefeld, and C.R. Hoffman, and R. Howes, and B. Luther, and E. Mosby, and S. Mosby, and D. Padilla, and P.V. Pancella, and G. Peaslee, and W.F. Rogers, and A. Schiller, and M.J. Strongman, and M. Thoennessen, and L.O. Wagner",
+        author:"G. Christian and W.A. Peters and D. Absalon and D. Albertson and T. Baumann and D. Bazin and E. Breitbach and J. Brown and P.L. Cole and D. Denby and P.A. DeYoung and J.E. Finck and N. Frank and A. Fritsch and C. Hall and A.M. Hayes and J. Hinnefeld and C.R. Hoffman and R. Howes and B. Luther and E. Mosby and S. Mosby and D. Padilla and P.V. Pancella and G. Peaslee and W.F. Rogers and A. Schiller and M.J. Strongman and M. Thoennessen and L.O. Wagner",
         journal:"Nuclear Physics A",
         volume:"801",
         pages:"101-113",
