fixed bug with code link.  also comment out blog until research on it...

--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@ insightful approaches, and test approximations by writing code.
 <p>
 In addition to original research papers, I write articles to 
 explain the theories and approximations in use.  See my <a href="pub.html">Publications</a>.
-I may also <a href="http://uncalc.blogspot.com/" target="lowblog">blog</a> about
-some interesting theories from time to time.
+<!--I may also <a href="http://uncalc.blogspot.com/" target="lowblog">blog</a> about
+some interesting theories from time to time.-->
 </p>
 
 </li>
@@ -80,7 +80,7 @@ Creations
 <p>
 In addition to coding for research,
 I enjoy attempting to make games and other useful content.
-Check out my <a href="code.html asdf">coding</a> webpage for links of what I've done
+Check out my <a href="code.html">coding</a> webpage for links of what I've done
 in the past and what I'm working on now.
 I support open source programming, so most of the releasable code is here on github.
 Various "helpful" code-snippets 
