increased publication grouping abilities

--- a/about.html
+++ b/about.html
@@ -58,7 +58,8 @@ insightful approaches, and test approximations by writing code.
 
 <p>
 In addition to original research papers, I write articles to 
-explain the theories and approximations in use.  See my <a href="pub.html">Publications</a>.
+explain the theories and approximations in use.  See my <a href="pub.html">publications</a>,
+specifically <a href="pub.html?t=nutshell">DFT in a nutshell</a>.
 <!--I may also <a href="http://uncalc.blogspot.com/" target="lowblog">blog</a> about
 some interesting theories from time to time.-->
 </p>
