New updated look.

--- a/about.html
+++ b/about.html
@@ -5,11 +5,18 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
 <a id="top"> </a>
-
+<div id=container>
 
 <!-- Main title and what not. -->
 <div class=header>
 <h2> about lucas o. wagner </h2>
+</div>
+
+
+
+<!-- Main stuff to read and what not. -->
+<div class=main>
+<div id=taglinks>
 <ul>
 
 <li>
@@ -27,10 +34,6 @@
 </div>
 
 
-
-<!-- Main stuff to read and what not. -->
-<div class=main>
-<h3>About me</h3>
 
 <ul>
 
@@ -150,6 +153,10 @@ Home
 Publications
 </a></li>
 
+<li><a href="teach.html" title="my courses">
+Teaching
+</a></li>
+
 <li><a href="code.html" title="my programming">
 Coding
 </a></li>
@@ -198,6 +205,8 @@ A blog
 
 </div>
 <!-- END not main links and menu what not. -->
+
+</div>
 
 </body>
 
