--- a/code.html
+++ b/code.html
@@ -6,9 +6,14 @@
 <body>
 <a id="top"> </a>
 <!-- Main title and what not. -->
-
+<div id=container>
 <div class=header>
-<h2> lucas o. wagner @ play </h2>
+<h2> lucas o. wagner | code </h2>
+</div>
+
+<!-- Main stuff to read and what not. -->
+<div class=main>
+<div id=taglinks>
 <ul>
 <li>
 <a href="#current">Current</a>
@@ -17,15 +22,13 @@
 <li>
 <a href="#useful">Useful</a>
 </li>
-
 <li>
 <a href="#games">Games</a>
 </li>
 </ul>
 </div>
 
-<!-- Main stuff to read and what not. -->
-<div class=main>
+
 
 <a id="current">
 <h3>Current projects</h3>
@@ -53,12 +56,13 @@ on it.
 </p>
 </li>
 
-
+</ul>
 
 <a id="useful">
 <h3>Useful</h3>
 </a>
 
+<ul>
 <li>
 <table>
 <tr>
@@ -68,8 +72,8 @@ on it.
 </table>
 <p>
 Pynances is a python-based utility for keeping track of your finances.
-I created it for my wife since we are in the challenging situation of being paid
-in two different currencies.  Download (or check out) from the
+Originally designed to work with multiple currencies,
+since my family is being paid in two!  Download (or check out) from the
 <a href="https://github.com/lowagner/pynances" target="pynances">github</a>
 page.
 </p>
@@ -77,12 +81,13 @@ page.
 
 
 
+</ul>
 
 <a id="games">
 <h3>Games</h3>
 </a>
 
-
+<ul>
 
 <li>
 <table>
@@ -100,10 +105,11 @@ page.
 </p>
 </li>
 
-
 <center>
 <a href="#top">Back to top</a>
 </center>
+
+
 
 </ul>
 
@@ -127,6 +133,10 @@ Home
 
 <li><a href="pub.html" title="my publications">
 Publications
+</a></li>
+
+<li><a href="teach.html" title="my courses">
+Teaching
 </a></li>
 
 <li><span>
@@ -177,7 +187,7 @@ A blog
 </div>
 <!-- END not main links and menu what not. -->
 
-
+</div>
 
 </body>
 
