--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
 <body>
+<div id=container>
 
 <a id="top"> </a>
 
@@ -14,6 +15,14 @@
 <!-- Main title and what not. -->
 <div class=header>
 <h2> lucas o. wagner </h2>
+</div>
+
+
+
+
+<!-- Main stuff to read and what not. -->
+<div class=main>
+<div id=taglinks>
 <ul>
 
 <li>
@@ -26,18 +35,12 @@
 
 </ul>
 </div>
-
-
-
-
-<!-- Main stuff to read and what not. -->
-<div class=main>
+<a id="hello"></a>
+<h3 id="demo">Hello!</h3>
 
 <ul>
 
 
-<a id="hello"></a>
-<h3 id="demo">Hello!</h3>
 
 <script >
 var x="";
@@ -129,6 +132,11 @@ document.write(today.getFullYear()+"-"+(today.getMonth()+1)+"-"+today.getDate())
 Publications
 </a></li>
 
+<li><a href="teach.html" title="my courses">
+Teaching
+</a></li>
+
+
 <li><a href="code.html" title="my programming">
 Coding
 </a></li>
@@ -178,7 +186,7 @@ A blog
 <!-- END not main links and menu what not. -->
 
 
-
+</div>
 </body>
 
 </html>
